Stops scrolling in mobile toggle
scrollbar appearing and scrollable in mobile view

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -35,6 +35,9 @@ body {
         padding: 0;
         position: relative;
     }
+    @media @mobile {
+        overflow: inherit;
+    }
 }
 
 .zone-area {
